[package]
name = "rconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solp = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.28.2", features = ["serialize"] }
structopt = "0.3.13"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
